--- a/package.json
+++ b/package.json
@@ -1,38 +1,32 @@
 {
-  "name": "odevjunior-backend",
+  "name": "odevjunior-com-br",
   "version": "1.0.0",
-  "description": "Backend of odevjunior application.",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "debug": "nodemon index.js"
+    "debug": "nodemon index.js",
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RobertoAsgon/odevjunior-backend.git"
-  },
-  "keywords": [
-    "dti",
-    "petsearch"
-  ],
-  "author": "Roberto Assis Gonçalves",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/RobertoAsgon/odevjunior-backend/issues"
-  },
-  "homepage": "https://github.com/RobertoAsgon/odevjunior-backend#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@hapi/boom": "^9.1.0",
+    "@mysql/xdevapi": "^8.0.20",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.4",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
-    "eslint": "^7.3.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0"
+    "eslint": "^6.1.0",
+    "jest": "25.1.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.21.2",
+    "nodemon": "^2.0.4",
+    "typescript": ">=2.8.0"
   }
 }
